--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <button class="leaf-button">
         Leaf
     </button>
-    <h1 class="heading"> Button Styles </h1>
-    <div class="btn-center">
+    <h1> Button Styles </h1>
+    <div>
         <button class="ready-button"> Ready </button>
         <button class="set-button"> Set </button>
         <button class="go-button"> Go </button>
